:bug: Fixing a bug.

--- a/src/style/article.scss
+++ b/src/style/article.scss
@@ -7,6 +7,7 @@
         top: 0;
         right: 0;
         z-index: 1000;
+        background-color: #293c55;
         .ivu-menu{
             &-horizontal{
                 height: 65px;
