--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -19,9 +19,9 @@
     margin: 40px 0 200px;
     a{
       color: #0099fb;
-      font-size: 16px;
+      font-size: 17px;
       display: inline-block;
-      padding: 10px;
+      padding: 10px 16px;
       position: relative;
       transition: color 0.3s;
       &:before, &:after{
