:bug: Fixing a bug.

--- a/src/template/index.ejs
+++ b/src/template/index.ejs
@@ -2,9 +2,10 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="A High quality and rich functions, friendly APIs, free and flexible UI Toolkit based on Vue.js.">
-    <title>iView - A high quality UI Toolkit based on Vue.js</title>
-    <link rel="shortcut icon" href="https://file.iviewui.com/file/favicon.ico">
+    <meta name="description" content="echarts demo">
+    <title>echarts demo</title>
+    <!--<link rel="fluid-icon" href="https://github.com/fluidicon.png" title="GitHub">-->
+    <link rel="shortcut icon" href="http://i1.social.s-msft.com/Forums/GlobalResources/images/Msdn/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[0] %>">
 </head>
 <body>
